--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <a href="index.html" class="active">Home</a>
             <a href="">Portfolio</a>
             <a href="">About Me</a>
-            <a href="images/resume.pdf" class="image fit">Resume</a>
+            <a href="images/resume (3).pdf" class="image fit" type="application/pdf">Resume</a>
         </div>
 
 
@@ -20,13 +20,14 @@
         </div>
 
         <div id="intro">
-            Hello, viewer! If you are reading this, then that means I have finally gotten around to making this! 
+            Hello, welcome to my personal website! 
         </div>
 
         <div id="para">
-            Hi, I am Michelle. I'm an International Baccalaureate student living in Canada and
+            I'm Michelle, and I'm an International Baccalaureate student living in Canada.
           I'm a passionate and dutiful worker, dedicated to my studies and pursuing personal interests. 
           The making of this website sparks the beginning of my programming journey--with hopefully much more to come!
+            You can read more about me by clicking on any of the tabs at the top of the screen.
         <div>
         
 
