--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <a href="index.html" class="active">Home</a>
             <a href="">Portfolio</a>
             <a href="">About Me</a>
-            <a href="images/resume (3).pdf" class="image fit" type="application/pdf">Resume</a>
+            <a href="resume (3).pdf" class="image fit" type="application/pdf">Resume</a>
         </div>
 
 
