--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
         <div class="pagination" id="navigation">
             <a href="index.html" class="active">Home</a>
-            <a href="">Portfolio</a>
-            <a href="">About Me</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="aboutme.html">About Me</a>
             <a href="resume (3).pdf" class="image fit" type="application/pdf">Resume</a>
         </div>
 
